Added basic css for user-profile.html

--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -1,4 +1,4 @@
-﻿<link href="../styles/user-style.css" rel="stylesheet" />
+﻿<link href="../styles/user-wall-style.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
     <div ng-include src="'../views/heading.html'"></div>
     <div class="user-bg-image col-xs-12">
@@ -18,13 +18,14 @@
         </div>
     </div>
     <div id="user-wall" class="col-lg-8 col-sm-7 col-xs-12">
+        <span>test</span>
     </div>
     <div ng-if="user.isFriend" id="user-post-and-friends" class="col-lg-4 col-sm-5 col-xs-12">
         <div id="post-box">
-            
+            <span>test</span>
         </div>
         <div id="friends-preview">
-            
+            <span>test</span>
         </div>
     </div>
 </div>
