--- a/SocialNetwork/SocialNetwork/styles/user-wall-style.css
+++ b/SocialNetwork/SocialNetwork/styles/user-wall-style.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 220px;
     position: relative;
+    padding: 0;
+    margin-bottom: 15px;
 }
 
 #user-data-container {
@@ -38,6 +40,14 @@
         border: 1px solid black;
         background-color: #9DC3E6;
     }
+
+#user-wall {
+    display: inline-block;
+    float: left;
+    margin-bottom: 25px;
+    padding: 0;
+    padding-right: 25px;
+}
 
 @media (max-width: 600px) {
     .user-bg-image {
