--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -30,7 +30,7 @@
                 <input ng-click="addNewPost(postText, user.username); postText=''" type="button" value="Submit"/>
             </div>
         </div>
-        <div id="friends-preview" class="col-xs-12">
+        <div id="friends-preview" class="col-xs-12" ng-init="getFriendFriendsPreview()">
             <h3 class="col-xs-12">Friends - <a href="#/{{ user.username }}/friends">{{ userFriends.totalCount }}</a> total</h3>
             <ul class="col-xs-12">
                 <li class="col-xs-4" ng-repeat="friend in userFriends.friends">
