--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -17,8 +17,12 @@
             </div>
         </div>
     </div>
-    <div id="user-wall" class="col-lg-8 col-sm-7 col-xs-12">
-        <span>test</span>
+    <div infinite-scroll="getUserWall(user.username)" infinite-scroll-disabled='standby' nfinite-scroll-distance="0" id="user-wall" class="col-lg-8 col-sm-7 col-xs-12">
+        <ul id="user-wall-posts" class="col-lg-8 col-md-10 col-xs-12">
+            <li class="col-xs-12 user-wall-post" ng-repeat="post in userWallPosts">
+                <span>{{ post.postContent }}</span>
+            </li>
+        </ul>
     </div>
     <div ng-if="user.isFriend" id="user-post-and-friends" class="col-lg-4 col-sm-5 col-xs-12">
         <div class="col-xs-12" id="post-box">
